public/css/index.css
body { 
    margin: 0; 
    padding-bottom: 3rem; 
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
}

/* make buttons feel more responsive */
button:hover {
    text-shadow: 0 0 2em rgba(255,255,255,1);
    color:lightgray !important;
    border-color: white !important;
}

#chat {
    position:fixed;
    height: 100%;
    width: 100%;
    font-size: 14px;
    display: flex;
    flex-direction: column;
    background-color: lightblue;
}

#chat-container {
    height: 60%;
    width:50%;
    display: flex;
    flex-direction: column;
    position: relative;
    border: 2px solid black;
}

#message-container {
    height:50%;
    position:relative;
    display: flex;
    flex-direction: column;
    flex: 1 1 auto;
    box-sizing: border-box;
    padding-bottom: 0.2em;
    border-radius: 3px;
    border-color: #333;
    overflow-y: auto;
    margin-bottom: 4em;
    background-color: white;
}


#send-container { 
    background-color: cornflowerblue;
    width: 100%;
    height: 2rem;
    display: flex;
    position: absolute;
    bottom: 0;
    border-top: 2px solid black;
}

#message { 
    padding: 0 0.5rem; 
    flex-grow: 1; 
    border-radius: 3px; 
    margin: 0.25rem;
}

#message:focus { outline: none; }

#send-container > button { 
    background: #333; 
    border: none; 
    padding: 0 1rem; 
    margin: 0.25rem; 
    border-radius: 3px; 
    outline: none;
    color: #fff; 
}

#users-online-container {
    height: 60%;
    width:200px;
    display: flex;
    flex-direction: column;
    position: relative;
    border: 2px solid black;
    border-left: 0px;
    overflow-y: auto;
    background-color: white;
}

#users-online-list {
    list-style-type: none; 
    margin: 0; 
    padding: 0; 
    font-weight: 600;
}

#create-new-name-container {
    width: 100%;
    display: flex;
    position: absolute;
    bottom: 0;
    height: 2rem;
    border-top: 2px solid black;
}

#create-new-name-container > button {
    background-color: green;
    color: white;
    width: 100%;
    border: none;
    font-weight: 600;
}

#users-online-list > li { 
    padding: 0.5rem 1rem; 
    word-break: break-all;
}

#users-online-list > li:nth-child(odd) { background: aliceblue; }

#message-list { 
    display:flex;
    flex-direction: column;
    list-style-type: none; 
    margin: 0; 
    padding: 0; 
}

#chat-user-container {
    display: flex;
    flex-direction: row;
    height: 100%;
    width: 100%;
    justify-content: center;
    margin-top: 50px;
}

#header-container {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 5%;
    font-family: serif;
    font-size: 1.2rem;
    font-weight: bold;
    justify-content: center;
}

#chat-header {
    display: flex;
    width: 50%;
    height: 100%;
    align-items: center;
    justify-content: center;
    margin-top: 50px;
    border:2px solid black;
    background-color: orange;
}

#users-online-header {
    display: flex;
    width: 200px;
    height: 100%;
    align-items: center;
    justify-content: center;
    margin-top: 50px;
    border:2px solid black;
    border-left: 0px;
    background-color: orange;
}

#users-typing-container {
    display: flex;
    background-color: white;
    position: absolute;
    bottom: 2rem;
    width: 100%;
    height: 2rem;
}
#users-typing {
    display: flex;
    padding-left: 1rem;
    height: 1rem;
    opacity: 20%;
    background-color: white;
    animation: fadeInAndOut 2s infinite linear;
    -webkit-animation:fadeInAndOut 2s infinite linear;
    -moz-animation: fadeInAndOut 2s infinite linear;
    -o-animation: fadeInAndOut 2s infinite linear;
    -ms-animation: fadeInAndOut 2s infinite linear;
}

/* Styling for different types of messages */
#message-list > li { 
    display:flex;
    flex-direction: column;
    width: fit-content;
    word-break: break-all;
    max-width: 65%;
}

#your-message {
    background-color: cornflowerblue;
    margin-left: auto; 
    margin-right: 1rem;
    margin-bottom: 1rem;
    color: white;
}

#your-private-message {
    background-color: plum;
    margin-left: auto; 
    margin-right: 1rem;
    margin-bottom: 1rem;
    color:purple;
}

#public-message {
    background-color: #efefef;;
    margin-right: auto;
    margin-left: 1rem;
    margin-bottom: 1rem;
}

#private-message {
    background-color: #CBC3E3;
    margin-right: auto;
    margin-left: 1rem;
    margin-bottom: 1rem;
    color:purple;
}

#server-message {
    background-color: white;
    font-style: italic;
}

#username-tag {
    margin:0;
    background-color: white;
    font-weight: bold;
}

#your-tag {
    margin:0;
    background-color: white;
    text-align: right;
    font-weight: bold;
    color: black;
}

#message-text {
    margin:0;
    padding: 0.5rem 1rem;
}

/* creating fading animation for users typing */
@keyframes fadeInAndOut {
    50% { opacity: 1; }
}

@-webkit-keyframes fadeInAndOut {
    50% { opacity: 1; }
}

@-moz-keyframes fadeInAndOut {
    50% { opacity: 1; }
}

@-o-keyframes fadeInAndOut {
    50% { opacity: 1; }
}

@-ms-keyframes fadeInAndOut {
    50% { opacity: 1; }
}

